Added container portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,23 @@ header{
 .border-black{
     border: 1px solid black;
 }
+
+.bg-red{
+    background-color: rgb(190, 77, 77);
+}
+
+.bg-skyblue{
+    background-color: rgb(71, 155, 188);
+}
+
+.bg-lightblue{
+    background-color: rgb(19, 114, 146);
+}
+
+.bg-blue{
+    background-color: blue;
+}
+
+.bg-bisque{
+    background-color: rgb(179, 158, 132);
+}
