--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,12 @@ ul{
 .message-input{
     padding-bottom: 70px;
 }
+
+.circle-icons{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
+}
